p3/manifests/dev/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: httpd
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c", "cp /start.sh /tmp/start.sh && chmod +x /tmp/start.sh && /tmp/start.sh"]
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/apache2/htdocs/index.template.html
          subPath: index.template.html
        - name: script-volume
          mountPath: /start.sh
          subPath: start.sh
      volumes:
      - name: config-volume
        configMap:
          name: app-config
      - name: script-volume
        configMap:
          name: app-config
